# PaperTalk

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  dev.sh  package.json  pdf_utils.py  vector_store.py
backend/: .env.example  DEPLOYMENT.md  README.md  app.py  auth_utils.py  constants.py  db_utils.py  debug_startup.py  gunicorn.conf.py  models.py  pdf_utils.py  prompts.py  pyproject.toml  requirements.txt  robust_start.py  run.py  start.py  test_db_fix.py  test_startup.py  vector_store.py
backend/config/: config.py
backend/routers/: auth.py
backend/services/: __init__.py  ai_service.py  auth_service.py  better_retrieval_service.py  context_builder.py  document_service.py  embedding_service.py  query_service.py
backend/tests/: test_auth_service_class_shape.py  test_db_utils_indexes.py  test_embedding_service.py  test_vector_store_embeddings.py
config/: config.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/auth/: layout.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/auth/error/: page.tsx
frontend/app/components/: ChatInterface.tsx  SpacesList.tsx
frontend/app/llms.txt/: route.ts
frontend/app/login/: layout.tsx  page.tsx
frontend/app/space/[spaceid]/: page.tsx
frontend/app/spaces/: page.tsx
frontend/components/: ChatInterface.tsx  Navbar.tsx  SpacesList.tsx  UserProfile.tsx
frontend/components/chat/: CitationCard.tsx  CitationModal.tsx  InlineCitation.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  SuggestedPrompts.tsx
frontend/components/documents/: DocumentsModal.tsx
frontend/components/landing/: HomePage.tsx
frontend/components/space/: SpaceCard.tsx  SpaceHeader.tsx
frontend/components/ui/: ConfirmDialog.tsx  LoadingSkeleton.tsx  ModelSelector.tsx
frontend/context/: AuthContext.tsx  GlobalContext.tsx  SpaceContext.tsx
frontend/hooks/: useAutoResizeTextarea.ts  useDocuments.ts  useMessages.ts  useSpaceName.ts
frontend/lib/: config.ts  site.ts  utils.ts
frontend/lib/api/: chat.ts  client.ts  documents.ts  spaces.ts
frontend/types/: index.ts
